[project]
name = "mcp-zuul"
version = "0.7.0"
description = "MCP server for Zuul CI — read-only access to builds, logs, status, and jobs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    {name = "Itay Matza"},
]
keywords = ["mcp", "zuul", "ci", "zuul-ci", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.28.0",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
kerberos = ["gssapi>=1.8.0"]
console = ["websockets>=14.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "pytest-cov>=6.0",
    "pip-audit>=2.7",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-defusedxml>=0.7",
]

[project.scripts]
mcp-zuul = "mcp_zuul:main"

[project.urls]
Homepage = "https://github.com/imatza-rh/mcp-zuul"
Repository = "https://github.com/imatza-rh/mcp-zuul"
Issues = "https://github.com/imatza-rh/mcp-zuul/issues"
Changelog = "https://github.com/imatza-rh/mcp-zuul/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_zuul"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line length (handled by formatter)
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["mcp_zuul"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "gssapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "websockets.*"
ignore_missing_imports = true

